--- a/indexPage2.html
+++ b/indexPage2.html
@@ -12,18 +12,17 @@
     <!-- Header -->
     <header class="header">
         <div class="header-left">
-            <!-- Image source: https://fbnn.org/ham/ -->
             <img src="images/logo.png" alt="Fight Hunger Logo" class="logo" />
         </div>
 
         <div class="header-center">
             <h1>Game Quiz</h1>
             <nav class="nav-links">
-                <a href="index.html">Page1</a>
-                <a href="indexPage2.html">Page2</a>
+                <a href="index.html">Home Page</a>
+                <a href="indexPage2.html">Quiz Game</a>
                 <a href="page3.html">Page3</a>
                 <a href="page4.html">Page4</a>
-                <a href="indexPage5.html">Page5</a>
+                <a href="indexPage5.html">Statistics</a>
                 <a href="page6.html">Page6</a>
             </nav>
         </div>
