--- a/indexPage5.html
+++ b/indexPage5.html
@@ -2,33 +2,34 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Every Meal Counts</title>
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
   <!-- Header -->
-<header class="header">
-  <div class="header-left">
-    <!-- Image source: https://fbnn.org/ham/ -->
-    <img src="images/logo.png" alt="Fight Hunger Logo" class="logo" />
-  </div>
+  <header class="header">
+    <div class="header-left">
+      <img src="images/logo.png" alt="Fight Hunger Logo" class="logo" />
+    </div>
 
-  <div class="header-center">
-    <h1>Every Meal Counts</h1>
-    <nav class="nav-links">
-      <a href="index.html">Page1</a>
-      <a href="indexPage2.html">Page2</a>
-      <a href="page3.html">Page3</a>
-      <a href="page4.html">Page4</a>
-      <a href="indexPage5.html">Page5</a>
-      <a href="page6.html">Page6</a>
-    </nav>
-  </div>
-</header>
+    <div class="header-center">
+      <h1>Every Meal Counts</h1>
+      <nav class="nav-links">
+        <a href="index.html">Home Page</a>
+        <a href="indexPage2.html">Quiz Game</a>
+        <a href="page3.html">Page3</a>
+        <a href="page4.html">Page4</a>
+        <a href="indexPage5.html">Statistics</a>
+        <a href="page6.html">Page6</a>
+      </nav>
+    </div>
+  </header>
 
   <!-- Hunger Stats Table -->
   <section class="hunger-stats">
@@ -63,21 +64,28 @@
   <section class="action">
     <h2>Daily Actions You Could Take - From Plate to Planet</h2>
     <div class="grid">
-      <div class="card">🛒<p>Buy only what you need</p></div>
-      <div class="card">🍽️<p>Plan meals in advance</p></div>
-      <div class="card">❄️<p>Store leftovers properly</p></div>
-      <div class="card">📱<p>Use food-saving apps</p></div>
-      <div class="card">🥫<p>Donate to food banks</p></div>
-      <div class="card">💡<p>Understand expiration labels</p></div>
+      <div class="card">🛒<p>Buy only what you need</p>
+      </div>
+      <div class="card">🍽️<p>Plan meals in advance</p>
+      </div>
+      <div class="card">❄️<p>Store leftovers properly</p>
+      </div>
+      <div class="card">📱<p>Use food-saving apps</p>
+      </div>
+      <div class="card">🥫<p>Donate to food banks</p>
+      </div>
+      <div class="card">💡<p>Understand expiration labels</p>
+      </div>
     </div>
   </section>
 
   <!-- Footer for 'All rights reserved' at the bottom of every page -->
   <footer>
-		<p>All rights reserved. Copyright &copy</p>
-	</footer>
+    <p>All rights reserved. Copyright &copy</p>
+  </footer>
 
   <!-- JavaScript linked to this page -->
   <script src="js/javaScript.js"></script>
 </body>
+
 </html>
