--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Page 1 HTML -->
+<!-- Home Page was made by Nerijus Kmitas x24170232-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,9 +15,8 @@
   <!-- Header -->
   <header class="header">
     <div class="header-left">
-      <img src="images/logo.png" alt="Fight Hunger Logo" class="logo" />
+      <img src="images/logo.png" alt="Fight Hunger Logo" class="mainLogo" />
     </div>
-
     <div class="header-center">
       <h1>Causes of Hunger</h1>
       <nav class="nav-links">
@@ -48,43 +47,73 @@
   </div>
 
   <div class="info">
-    <div class="info-block">
-      <h3>Inequality and Poor Governance</h3>
-      <p>Unequal distribution of resources and lack of effective public policies often leave marginalized communities
-        without access to food or land. Corruption and mismanagement can also worsen hunger in regions that produce
-        plenty of food.</p>
+
+    <div class="info-row normal">
+      <div class="info-text">
+        <h3>Inequality and Poor Governance</h3>
+        <p>Unequal distribution of resources and lack of effective public policies often leave marginalized communities
+          without access to food or land. Corruption and mismanagement can also worsen hunger in regions that produce
+          plenty of food.</p>
+      </div>
+      <div class="info-image">
+        <!-- Image source: https://www.vecteezy.com/photo/36708019-ai-generated-poor-kids-standing-in-line-holding-empty-pots -->
+        <img src="images/image1.jpg" alt="Fight Hunger Logo" class="logo" />
+      </div>
     </div>
-    <div class="info-block">
-      <h3>Conflict and War</h3>
-      <p>Areas affected by armed conflicts suffer from destroyed agricultural infrastructure, blocked food supplies, and
-        the forced displacement of people. These conditions disrupt food production and distribution, greatly increasing
-        hunger levels.</p>
+
+    <div class="info-row reverse">
+      <div class="info-text">
+        <h3>Conflict and War</h3>
+        <p>Areas affected by armed conflicts suffer from destroyed agricultural infrastructure, blocked food supplies,
+          and
+          the forced displacement of people. These conditions disrupt food production and distribution, greatly
+          increasing
+          hunger levels.</p>
+      </div>
+      <div class="info-image">
+        <!-- Image source: https://www.vecteezy.com/photo/44426317-hungry-homeless-people-request-free-food-donations-from-volunteers-social-concept-of-helping -->
+        <img src="images/image2.jpg" alt="Fight Hunger Logo" class="logo" />
+      </div>
     </div>
-    <div class="info-block">
-      <h3>Poverty</h3>
-      <p>The leading cause of hunger is poverty. Families living with limited resources cannot afford enough food or
-        nutritious options. Poverty also restricts access to education, healthcare, and job opportunities, creating a
-        difficult cycle to break.</p>
+
+    <div class="info-row normal">
+      <div class="info-text">
+        <h3>Poverty</h3>
+        <p>The leading cause of hunger is poverty. Families living with limited resources cannot afford enough food or
+          nutritious options. Poverty also restricts access to education, healthcare, and job opportunities, creating a
+          difficult cycle to break.</p>
+      </div>
+      <div class="info-image">
+        <!-- Image source: https://www.vecteezy.com/photo/65443145-food-in-a-cardboard-box-on-white-background -->
+        <img src="images/image3.png" alt="Fight Hunger Logo" class="logo" />
+      </div>
     </div>
-    <div class="info-block">
-      <h3>Economic Instability</h3>
-      <p>Inflation, unemployment, and economic crises can severely limit people's ability to buy food. Global supply
-        chain disruptions or rising food prices can make even basic items unaffordable for low-income families.</p>
+
+    <div class="info-row reverse">
+      <div class="info-text">
+        <h3>Economic Instability</h3>
+        <p>Inflation, unemployment, and economic crises can severely limit people's ability to buy food. Global supply
+          chain disruptions or rising food prices can make even basic items unaffordable for low-income families.</p>
+      </div>
+      <div class="info-image">
+        <!-- Image source: https://www.freepik.com/free-photo/top-view-food-donation_10856841.htm#fromView=keyword&page=2&position=4&uuid=04bd12d9-b9c7-4d3a-aa1f-7591208bac5f&query=Hunger+Relief+Awareness -->
+        <img src="images/image4.jpg" alt="Fight Hunger Logo" class="logo" />
+      </div>
+    </div>
+
+    <div class="footer">
+      <p><em>See how you can raise awareness and help</em></p>
+      <div class="quiz-button">
+        <a href="indexPage2.html" id="quizButton">Play our quiz</a>
+      </div>
     </div>
   </div>
 
-  <div class="footer">
-    <p><em>See how you can raise awareness and help</em></p>
-    <div class="quiz-button">
-      <a href="indexPage2.html" id="quizButton">Play our quiz</a>
-    </div>
-  </div>
+    <footer>
+      <h4>All rights reserved. Copyright &copy</h4>
+    </footer>
 
-  <footer>
-    <p>All rights reserved. Copyright &copy</p>
-  </footer>
-
-  <script src="js/javaScript.js"></script>
+    <script src="js/javaScript.js"></script>
 
 
 </body>
