--- a/indexPage5.html
+++ b/indexPage5.html
@@ -1,4 +1,4 @@
-<!-- Page 5 HTML -->
+<!-- Statistics page was made by Nerijus Kmitas x24170232-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -15,7 +15,7 @@
   <!-- Header -->
   <header class="header">
     <div class="header-left">
-      <img src="images/logo.png" alt="Fight Hunger Logo" class="logo" />
+      <img src="images/logo.png" alt="Fight Hunger Logo" class="mainLogo" />
     </div>
 
     <div class="header-center">
@@ -54,8 +54,8 @@
   <section class="slider-section">
     <h2>What if We Saved <span class="small">this much?</span></h2>
     <div class="slider-container">
-      <label></label><span id="sliderValue">25%</span></label>
-      <input type="range" id="wasteSlider" min="10" max="100" step="5" value="25" />
+      <label></label><span id="sliderValue">25%</span></label> <!-- By default it is set to 25 % -->
+      <input type="range" id="rangeSlider" min="10" max="100" step="5" value="25" />
       <p id="sliderText">We could feed over 870 million people annually</p>
     </div>
   </section>
@@ -81,7 +81,7 @@
 
   <!-- Footer for 'All rights reserved' at the bottom of every page -->
   <footer>
-    <p>All rights reserved. Copyright &copy</p>
+    <h4>All rights reserved. Copyright &copy</h4>
   </footer>
 
   <!-- JavaScript linked to this page -->
