--- a/indexPage2.html
+++ b/indexPage2.html
@@ -1,3 +1,5 @@
+<!-- Quiz page was made by Mateus Silva De Oliveira x23316748 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,11 +14,11 @@
     <!-- Header -->
     <header class="header">
         <div class="header-left">
-            <img src="images/logo.png" alt="Fight Hunger Logo" class="logo" />
+            <img src="images/logo.png" alt="Fight Hunger Logo" class="mainLogo" />
         </div>
 
         <div class="header-center">
-            <h1>Game Quiz</h1>
+            <h1>Every Meal Counts</h1>
             <nav class="nav-links">
                 <a href="index.html">Home Page</a>
                 <a href="indexPage2.html">Quiz Game</a>
