--- a/indexPage2.html
+++ b/indexPage2.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="header-center">
-            <h1>Every Meal Counts</h1>
+            <h1>SDG Game Quiz</h1>
             <nav class="nav-links">
                 <a href="index.html">Home Page</a>
                 <a href="indexPage2.html">Quiz Game</a>
