--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!-- Home Page was made by Nerijus Kmitas x24170232-->
+<!-- Home Page
+ Made by: Nerijus Kmitas
+ Student ID x24170232 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -110,7 +112,7 @@
   </div>
 
     <footer>
-      <h4>All rights reserved. Copyright &copy</h4>
+      <h4>&copyCopyright 2025 HungerAwarness All rights reserved</h4>
     </footer>
 
     <script src="js/javaScript.js"></script>
