--- a/indexPage5.html
+++ b/indexPage5.html
@@ -1,4 +1,6 @@
-<!-- Statistics page was made by Nerijus Kmitas x24170232-->
+<!-- Statistics page
+ Made by: Nerijus Kmitas
+ Student ID x24170232 -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -77,11 +79,33 @@
       <div class="card">💡<p>Understand expiration labels</p>
       </div>
     </div>
+    <br>
+
+    <div class="grid">
+      <div class="picture">
+        <img src="images/image5.jpg" alt="Food trolley picture" class="food" />
+      </div>
+      <div class="picture">
+        <img src="images/image6.jpg" alt="Shopping list picture" class="food" />
+      </div>
+      <div class="picture">
+        <img src="images/image7.jpg" alt="Fridge with leftovers" class="food" />
+      </div>
+      <div class="picture">
+        <img src="images/image8.jpeg" alt="Using food app" class="food" />
+      </div>
+      <div class="picture">
+        <img src="images/image9.JPG" alt="Food donation" class="food" />
+      </div>
+      <div class="picture">
+        <img src="images/image10.jpg" alt="Expiration label" class="food" />
+      </div>
+    </div>
   </section>
 
   <!-- Footer for 'All rights reserved' at the bottom of every page -->
   <footer>
-    <h4>All rights reserved. Copyright &copy</h4>
+    <h4>&copyCopyright 2025 HungerAwarness All rights reserved</h4>
   </footer>
 
   <!-- JavaScript linked to this page -->
