--- a/indexPage5.html
+++ b/indexPage5.html
@@ -62,7 +62,7 @@
     </div>
   </section>
 
-  <!-- Action Cards Section -->
+  <!-- Action Cards and Pictures Section -->
   <section class="action">
     <h2>Daily Actions You Could Take - From Plate to Planet</h2>
     <div class="grid">
@@ -83,21 +83,27 @@
 
     <div class="grid">
       <div class="picture">
+        <!-- Image resource: https://www.vecteezy.com/photo/35942635-ai-generated-close-up-of-full-shopping-cart-in-grocery-store-ai-generated -->
         <img src="images/image5.jpg" alt="Food trolley picture" class="food" />
       </div>
       <div class="picture">
+        <!-- Image resource: https://www.vecteezy.com/photo/6729718-hand-holding-shopping-list-over-supermarket-blur-background -->
         <img src="images/image6.jpg" alt="Shopping list picture" class="food" />
       </div>
       <div class="picture">
+        <!-- Image resource: https://www.vecteezy.com/photo/24495319-opening-fridge-to-make-shopping-list-generate-ai -->
         <img src="images/image7.jpg" alt="Fridge with leftovers" class="food" />
       </div>
       <div class="picture">
+        <!-- Image resource: https://www.vecteezy.com/photo/66242217-person-holding-a-smartphone-next-to-fresh-vegetables-on-display -->
         <img src="images/image8.jpeg" alt="Using food app" class="food" />
       </div>
       <div class="picture">
+        <!-- Image resource: https://www.vecteezy.com/photo/5571457-donations-box-with-canned-food-on-wooden-table-background-pasta-canned-goods-and-dry-food-non-perishable-with-cooking-oil-rice-noodles-spaghetti-macaroni-donations-food -->
         <img src="images/image9.JPG" alt="Food donation" class="food" />
       </div>
       <div class="picture">
+        <!-- Image resource: https://ie.pinterest.com/pin/1002473198277910655/ -->
         <img src="images/image10.jpg" alt="Expiration label" class="food" />
       </div>
     </div>
