--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- Header that will be displayed across all page -->
   <header class="header">
     <div class="header-left">
+      <!-- Logo was created by Nerijus Kmitas -->
       <img src="images/logo.png" alt="Fight Hunger Logo" class="mainLogo" />
     </div>
     <div class="header-center">
