--- a/indexPage5.html
+++ b/indexPage5.html
@@ -81,6 +81,7 @@
     </div>
     <br>
 
+    <!-- Pictures grid starts here -->
     <div class="grid">
       <div class="picture">
         <!-- Image resource: https://www.vecteezy.com/photo/35942635-ai-generated-close-up-of-full-shopping-cart-in-grocery-store-ai-generated -->
